# VIBe2Modules

./: CMakeLists.txt  Readme
debian/: README.Debian  README.source  bzr-builder.manifest  changelog  control  control~  copyright  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  vibe2modules.cron.d.ex  vibe2modules.default.ex  vibe2modules.doc-base.EX  watch.ex
scripts/: CMakeLists.txt  CMakeLists.txt~  Evaluation.py  Modules.py
scripts/__evaluation/: __init__.py  numberoffaces.py  totallengthoflines.py
scripts/__modules/: ExportToShapeFile.py  ExportToShapeFile.py~  __init__.py  __init__.py~  appendcatchment.py  appendcatchment.py~  convertcorine.py  convertcorine.py~  createblocks.py  createblocks.py~  createrastergrid.py  evaluation.py  evaluation.py~  guiplotraster.py  guiplotraster.py~  guiplotraster.ui  guiplotraster_ui.py  guiplotraster_ui.py~  importpointdata.py  importpointdata.py~  importpointdata.xml  importshape.py  importshape.py~  intersectvectordata.py  intersectvectordata.py~  intersectvectordata.xml  plotraster.py  plotraster.py~  plotvectordata.py  plotvectordata.py~  plotvectordata.xml  randomdouble.py  randomdouble.py~  rasterdatatopoints.py  rasterdatatopoints.py~  testmodule.py  testmodule.py~  vectordataaddition.xml  whitenoise.py  whitenoise.py~  (+2 more)
src/modules/: CMakeLists.txt  CMakeLists.txt~  appendattributes.cpp  appendattributes.h  appendfaceidtoface.cpp  appendfaceidtoface.h  appendstringattribute.cpp  blocks.cpp  (+85 more)
