file(GLOB PYTHONMODULES *.py)
file(GLOB PYTHONMODULES_M __modules/*)
file(GLOB EVAL_M __evaluation/*)
# Installation of the program

INSTALL(FILES ${PYTHONMODULES}
        DESTINATION "share/vibe2/scripts/"
        PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
INSTALL(FILES ${PYTHONMODULES_M}
        DESTINATION "share/vibe2/scripts/__modules/"
        PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
INSTALL(FILES ${EVAL_M}
        DESTINATION "share/vibe2/scripts/__evaluation/"
        PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
